# OpenTrace

./: CMakeLists.txt  README.md  prj.conf
Schematic/: 1-Schematic_IoT Board.json
boards/: nrf9160dk_nrf9160_ns.overlay
src/: main.c  udp_server.py
src/app/: fsm.c  fsm.h  payload.c  payload.h  storage.c  storage.h  watchdog_mgr.c  watchdog_mgr.h
src/drivers/: npm1300.c  npm1300.h  veml6035.c  veml6035.h
src/power/: power_mgr.c  power_mgr.h
